fix overlapping 2

--- a/src/styles/blocks/category.scss
+++ b/src/styles/blocks/category.scss
@@ -9,7 +9,6 @@
       content: "";
       display: block;
       padding-bottom: 100%;
-      z-index: -1;
     }
 
     @include onTablet {
