--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -20,6 +20,7 @@
 
     &:target {
       transform: translateX(0);
+      z-index: 1;
     }
   }
 
